Minor Java cleanup