@@ -2703,11 +2703,11 @@ public class MXParser
             if(ch == 'y') {
                 ch = requireInput(ch, YES);
                 //Boolean standalone = new Boolean(true);
-                xmlDeclStandalone = new Boolean(true);
+                xmlDeclStandalone = Boolean.valueOf(true);
             } else if(ch == 'n') {
                 ch = requireInput(ch, NO);
                 //Boolean standalone = new Boolean(false);
-                xmlDeclStandalone = new Boolean(false);
+                xmlDeclStandalone = Boolean.valueOf(false);
             } else {
                 throw new XmlPullParserException(
                     "expected 'yes' or 'no' after standalone and not "
